sky-crypt/sky-crypt.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sky-crypt
  namespace: sky-crypt
  annotations:
    config.linkerd.io/skip-outbound-ports: "3307"
  labels:
    app: sky-crypt
spec:
  selector:
    matchLabels:
      app: sky-crypt
  replicas: 1
  template:
    metadata:
      annotations:
        config.linkerd.io/skip-outbound-ports: "3307"
      labels:
        app: sky-crypt
    spec:
      affinity: 
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: hetzner
                operator: NotIn
                values:
                - "true"
      imagePullSecrets:
        - name: harbor
      containers:
      - name: sky-crypt
        image: harbor.flou.dev/private/sky-crypt-private:32e985b3-e40f-4156-aedc-d5b72338af17
        ports:
        - containerPort: 32464
          name: web
        resources:
          requests:
            cpu: 200m
            memory: 800Mi
          limits:
            cpu: 3000m
            memory: 2Gi
        startupProbe:
          httpGet:
              path: /stats/Flou21/Zucchini
              port: 32464
          initialDelaySeconds: 500
          periodSeconds: 30
          timeoutSeconds: 3
          failureThreshold: 20
          successThreshold: 1
        livenessProbe:
          httpGet:
              path: /stats/Flou21/Zucchini
              port: 32464
          initialDelaySeconds: 600
          periodSeconds: 30
          timeoutSeconds: 3
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: sky-crypt
  namespace: sky-crypt
spec:
  selector:
    app: sky-crypt
  ports:
  - port: 80
    targetPort: 32464
